# NDI-Programming-Test

./: CMakeLists.txt  NDIlib_Find.cpp  NDIlib_Find.vcxproj  ndi_sources.txt
